--- a/src/app/ver/[animeSlug]/[episodeNumber]/page.module.css
+++ b/src/app/ver/[animeSlug]/[episodeNumber]/page.module.css
@@ -92,3 +92,9 @@
     height: 1.5rem;
     transition: fill 0.2s ease-in-out;
 }
+
+@media screen and (min-width: 1600px) {
+    .container {
+        max-width: 1450px;
+    }
+}
